Mon Feb  9 11:31:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): ignore second argument when external and
	  internal are same. [ruby-dev:37939]

Mon Feb  9 09:05:12 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_local_peercred): check version.
	  (sockopt_inspect): suppress warning.

Mon Feb  9 02:04:03 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_peercred): struct ucred contains
	  effective uid/gid.

Mon Feb  9 00:44:45 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_inspect): add ifdef guard for
	  LOCAL_PEERCRED.

Mon Feb  9 00:37:06 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_local_peercred): cr_uid is a effective
	  uid, not a real uid.

Mon Feb  9 00:30:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check sys/param.h and sys/ucred.h.

	* ext/socket/rubysocket.h: include sys/param.h and sys/ucred.h.

	* ext/socket/option.c (inspect_local_peercred): new function to show
	  LOCAL_PEERCRED socket option on FreeBSD.
	  (sockopt_inspect): show as LOCAL_* socket option if AF_UNIX and level
	  is 0.

Mon Feb  9 00:01:47 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/rubysocket.h (sockopt_new): add family argument.

	* ext/socket/option.c (sockopt_initialize): add vfamily argument.
	  (sockopt_new): add family argument and record it in the object.
	  (sockopt_family): new method.
	  (sockopt_s_int): add vfamily argument.
	  (sockopt_inspect): show family.

	* ext/socket/basicsocket.c (bsock_getsockopt): check address family
	  using getsockname.

Sun Feb  8 23:37:17 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* enumerator.c (enumerator_with_index): receives one argument which
	  represents a start offset.  [ruby-dev:37921]

Sun Feb  8 23:28:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* include/ruby/st.h, st.c: order entries by a linked list instead of
	  a loop to fix iteration miss when hash is modified during iteration.
	  [ruby-dev:37910]