@@ -1,3 +1,14 @@
+Mon Feb  9 19:46:22 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/ancdata.c (ancillary_initialize): add family argument.
+	  (ancdata_new): ditto.
+	  (ancillary_s_int): ditto.
+	  (ancillary_family): new function.
+	  (ancillary_family_m): new method.
+	  (ancillary_s_ip_pktinfo): follow ancdata_new change.
+	  (ancillary_s_ipv6_pktinfo): ditto.
+	  (bsock_recvmsg_internal): examine the socket address family.
+
 Mon Feb  9 11:31:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* io.c (io_encoding_set): ignore second argument when external and
